do not use json for digest