@@ -41,12 +41,16 @@ import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
+import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.security.MessageDigest;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -55,14 +59,18 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.function.Function;
+import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.codec.binary.Hex;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.lang3.StringUtils;
 
@@ -70,8 +78,6 @@ import org.apache.commons.lang3.StringUtils;
 public class ModelBuilder {
 
     static final ObjectMapper mapper = new ObjectMapper(new YAMLFactory());
-    static final ObjectMapper binariesDigestMapper =
-            new ObjectMapper().configure(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS, true);
 
     @Getter
     public static class ApplicationWithPackageInfo {
@@ -105,19 +111,53 @@ public class ModelBuilder {
                 applicationDirectories,
                 instanceContent,
                 secretsContent,
-                bytes -> DigestUtils.sha256Hex(bytes));
+                new MessageDigestFunction(DigestUtils::getSha256Digest),
+                new MessageDigestFunction(DigestUtils::getSha256Digest));
     }
+
+
+    static class MessageDigestFunction implements ChecksumFunction {
+
+        private final Supplier<MessageDigest> messageDigestSupplier;
+        private MessageDigest messageDigest;
+
+        public MessageDigestFunction(Supplier<MessageDigest> messageDigestSupplier) {
+            this.messageDigestSupplier = messageDigestSupplier;
+        }
+
+        @Override
+        public void appendFile(String filename, byte[] data) {
+            if (messageDigest == null) {
+                messageDigest = messageDigestSupplier.get();
+            }
+            messageDigest.update(filename.getBytes(StandardCharsets.UTF_8));
+            messageDigest.update(data);
+        }
+
+        @Override
+        public String digest() {
+            if (messageDigest == null) {
+                return null;
+            }
+            return Hex.encodeHexString(messageDigest.digest());
+        }
+    }
+
+
+    interface ChecksumFunction {
+        void appendFile(String filename, byte[] data);
+        String digest();
+    }
+
 
     static ApplicationWithPackageInfo buildApplicationInstance(
             List<Path> applicationDirectories,
             String instanceContent,
             String secretsContent,
-            Function<byte[], String> checksumFunction)
+            ChecksumFunction pyChecksumFunction,
+            ChecksumFunction javaChecksumFunction)
             throws Exception {
         Map<String, String> applicationContents = new HashMap<>();
-
-        TreeMap<String, String> sortedPyBinaries = new TreeMap<>();
-        TreeMap<String, String> sortedJavaBinaries = new TreeMap<>();
 
         for (Path directory : applicationDirectories) {
             log.info("Parsing directory: {}", directory.toAbsolutePath());
@@ -153,12 +193,12 @@ public class ModelBuilder {
                         if (Files.isDirectory(path)) {
                             String filename = path.getFileName().toString();
                             if (filename.equals("python")) {
-                                recursiveAppendFiles(sortedPyBinaries, path, path);
+                                recursiveAppendFiles(pyChecksumFunction, path, path);
                             } else {
                                 if (filename.equals("java")) {
                                     final Path lib = path.resolve("lib");
                                     if (Files.exists(lib) && Files.isDirectory(lib)) {
-                                        recursiveAppendFiles(sortedJavaBinaries, lib, lib);
+                                        recursiveAppendFiles(javaChecksumFunction, lib, lib);
                                     }
                                 }
                             }
@@ -169,34 +209,28 @@ public class ModelBuilder {
         }
         final ApplicationWithPackageInfo applicationWithPackageInfo =
                 buildApplicationInstance(applicationContents, instanceContent, secretsContent);
-        if (!sortedJavaBinaries.isEmpty()) {
-            final byte[] data = binariesDigestMapper.writeValueAsBytes(sortedJavaBinaries);
-            applicationWithPackageInfo.javaBinariesDigest = checksumFunction.apply(data);
-        }
-        if (!sortedPyBinaries.isEmpty()) {
-            final byte[] data = binariesDigestMapper.writeValueAsBytes(sortedPyBinaries);
-            applicationWithPackageInfo.pyBinariesDigest = checksumFunction.apply(data);
-        }
+
+        applicationWithPackageInfo.javaBinariesDigest = javaChecksumFunction.digest();
+        applicationWithPackageInfo.pyBinariesDigest = pyChecksumFunction.digest();
         return applicationWithPackageInfo;
     }
 
-    private static void recursiveAppendFiles(
-            TreeMap<String, String> sortedPyBinaries, Path current, Path rootPath)
-            throws IOException {
+    private static void recursiveAppendFiles(ChecksumFunction checksumFunction, Path current, Path rootPath) {
 
         if (Files.isRegularFile(current)) {
             try {
                 final Path relativeCurrent = rootPath.relativize(current);
-                sortedPyBinaries.put(
-                        relativeCurrent.toString(),
-                        Files.readString(current, StandardCharsets.UTF_8));
+                final byte[] bytes = Files.readAllBytes(current);
+                checksumFunction.appendFile(relativeCurrent.toString(), bytes);
             } catch (IOException e) {
                 throw new IllegalArgumentException(e);
             }
         } else {
-            try (DirectoryStream<Path> paths = Files.newDirectoryStream(current); ) {
-                for (Path path : paths) {
-                    recursiveAppendFiles(sortedPyBinaries, path, rootPath);
+            final File[] files = current.toFile().listFiles();
+            if (files != null) {
+                Arrays.sort(files, Comparator.comparing(File::getName));
+                for (File file : files) {
+                    recursiveAppendFiles(checksumFunction, file.toPath(), rootPath);
                 }
             }
         }
